added navigation bar, and small changes in CSS, added effects

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,19 @@
 
 <body>
     <div class="containerAll">
+        <div class="box">
+            <img src="../assets/logo.png" alt="logo" id="site_logo">
+            <ul>
+                <li id="home">Početak</li>
+                <li id="about">O kremi</li>
+                <li id="ingredients">Sastav</li>
+                <li id="delivery">Isporuka</li>
+                <li id="order">Poručite</li>
+            </ul>
+            <div class="title" id="title">samo 2.998 din</div>
+        </div>
         <div class="main">
-            <div class="box">
-                <img src="../assets/discount.png" alt="discount" id="price_tag">
-                <div class="title" id="title">Flekosteel</div>
-            </div>
+            <img src="../assets/discount.png" alt="discount" id="price_tag">
             <div class="main_title">Bolovi u predelu leđa, vrata i zglobova više nisu nerešiv problem!</div>
             <div class="main_title2">Probajte Flekosteel, 100% prirodni preparat koji se koristi kod brojnih oboljenja i
                 povreda <br> koje izazivaju nelagodu i bolove u leđima, vratu i zglobovima.</div>
@@ -150,15 +158,17 @@
             <div class="form_container">
                 <div class="form_box">
                     <div class="form_box_title">Iskoristite specijalni popust koji traje još:</div>
-                    <p class="price1">98 &euro;</p>
+                    <p class="price1">5.999 DIN</p>
                     <p class="price_title">50&percnt; jeftinije</p>
-                    <p class="price2">49 &euro;</p>
+                    <p class="price2">2.998 DIN</p>
                     <div class="form_box_title2">U cenu su uračunati PDV i troškovi dostave!</div>
                 </div>
                 <div class="form_box">
                     <div class="form_order">
                         <p>Ime i prezime <span>&Star;</span></p>
                         <input type="text" id="name">
+                        <p>Adresa za dostavu <span>&Star;</span></p>
+                        <input type="text" id="address">
                         <p>Broj telefona <span>&Star;</span></p>
                         <input type="text" id="tel" placeholder="066/22-39-456">
                         <div class="form_button">Naruči</div>
