adedd mobile view and responsiv design (CSS)

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <li id="delivery">Isporuka</li>
                 <li id="order">Poručite</li>
             </ul>
-            <div class="title" id="title">samo 2.998 din</div>
+            <div class="title title_price" id="title">samo 2.998 din</div>
         </div>
         <div class="main">
             <img src="../assets/discount.png" alt="discount" id="price_tag">
